Minor Fix Dark Mode

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
     body {
-        @apply bg-zinc-900;
+        @apply dark:bg-zinc-900;
     }
 }
 
